# grid

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: ai.rs  eval.rs  io.rs  main.rs  model.rs
